Update httpclient, additional JDK id.